--- a/index.html
+++ b/index.html
@@ -186,6 +186,81 @@
         </div>
       </section>
 
+      <section id="resumo" class="resumo-section">
+        <div class="about-inner">
+          <header class="about-header">
+            <h2>Resumo</h2>
+            <p class="about-lead"><b>Minhas qualificações</b></p>
+          </header>
+
+          <!-- GRID com duas colunas: Educação | Experiência -->
+          <div class="timeline-grid">
+            <!-- EDUCAÇÃO -->
+            <div class="timeline-column">
+              <h3 class="timeline-title">Educação</h3>
+
+              <div class="timeline">
+                <article class="timeline-item">
+                  <div class="timeline-marker"><span>2022-2024</span></div>
+                  <div class="timeline-content">
+                    <h4>Curso Técnico - Desenvolvimento de Sistemas</h4>
+                    <p>
+                      SENAI/SC - Serviço Nacional de Aprendizagem Industrial —
+                      foco em sistema web, algoritmos e bancos de dados.
+                    </p>
+                  </div>
+                </article>
+
+                <article class="timeline-item">
+                  <div class="timeline-marker"><span>2024-atual</span></div>
+                  <div class="timeline-content">
+                    <h4>
+                      Graduação - Tecnologia em Análise e Desenvolvimento de
+                      Sistemas
+                    </h4>
+                    <p>
+                      Curso superior na área, aprofundo na área de
+                      desenvolvimento.
+                    </p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
+            <!-- EXPERIÊNCIA PROFISSIONAL -->
+            <div class="timeline-column">
+              <h3 class="timeline-title">Experiência Profissional</h3>
+
+              <div class="timeline">
+                <article class="timeline-item">
+                  <div class="timeline-marker"><span>2025-atual</span></div>
+                  <div class="timeline-content">
+                    <h4>
+                      Estagiário - Desenvolvedor Full Stack - UNIPLAST S/A
+                    </h4>
+                    <p>
+                      Atuando em sistema web interno da empresa, com foco no
+                      framework Codelgniter.
+                    </p>
+                  </div>
+                </article>
+
+                <article class="timeline-item">
+                  <div class="timeline-marker"><span>2024-atual</span></div>
+                  <div class="timeline-content">
+                    <h4>Freelancer</h4>
+                    <p>
+                      Desenvolvendo programa em sistema web para clientes que
+                      procuram faciltitar seu negócio.
+                    </p>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- portfolio -->
       <section id="portfolio">
         <h2 class="section-title">portfolio</h2>
