--- a/index.html
+++ b/index.html
@@ -287,40 +287,9 @@
                 <!-- Exemplo de projeto: duplique e ajuste data-github, img, título, descrição -->
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-1"
-                >
-                  <div class="card-project">
-                    <img
-                      src="assets/img/projects/project1.jpg"
-                      alt="Screenshot do projeto 1"
-                      class="card-thumb"
-                    />
-                    <div class="card-body">
-                      <h3 class="card-title">Projeto 1</h3>
-                      <p class="card-desc">
-                        Descrição curta do projeto 1 — stack: React, Node.
-                      </p>
-                      <a
-                        class="card-cta"
-                        href="https://github.com/usuario/projeto-1"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Veja no GitHub</a
-                      >
-                    </div>
-                  </div>
-                </article>
-
-                <article
-                  class="carousel-item"
                   data-github="https://github.com/usuario/projeto-2"
                 >
                   <div class="card-project">
-                    <img
-                      src="assets/img/projects/project2.jpg"
-                      alt="Screenshot do projeto 2"
-                      class="card-thumb"
-                    />
                     <div class="card-body">
                       <h3 class="card-title">Projeto 2</h3>
                       <p class="card-desc">
@@ -339,22 +308,38 @@
 
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-3"
+                  data-github="https://github.com/usuario/projeto-2"
                 >
                   <div class="card-project">
-                    <img
-                      src="assets/img/projects/project3.jpg"
-                      alt="Screenshot do projeto 3"
-                      class="card-thumb"
-                    />
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 3</h3>
+                      <h3 class="card-title">Projeto 2</h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 3 — stack: PHP, MySQL.
+                        Descrição curta do projeto 2 — stack: Next.js, API.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-3"
+                        href="https://github.com/usuario/projeto-2"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >Veja no GitHub</a
+                      >
+                    </div>
+                  </div>
+                </article>
+
+                <article
+                  class="carousel-item"
+                  data-github="https://github.com/usuario/projeto-2"
+                >
+                  <div class="card-project">
+                    <div class="card-body">
+                      <h3 class="card-title">Projeto 2</h3>
+                      <p class="card-desc">
+                        Descrição curta do projeto 2 — stack: Next.js, API.
+                      </p>
+                      <a
+                        class="card-cta"
+                        href="https://github.com/usuario/projeto-2"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -366,22 +351,17 @@
                 <!-- adicione quantos projetos quiser -->
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-3"
+                  data-github="https://github.com/usuario/projeto-2"
                 >
                   <div class="card-project">
-                    <img
-                      src="assets/img/projects/project3.jpg"
-                      alt="Screenshot do projeto 3"
-                      class="card-thumb"
-                    />
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 3</h3>
+                      <h3 class="card-title">Projeto 2</h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 3 — stack: PHP, MySQL.
+                        Descrição curta do projeto 2 — stack: Next.js, API.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-3"
+                        href="https://github.com/usuario/projeto-2"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -391,22 +371,17 @@
                 </article>
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-3"
+                  data-github="https://github.com/usuario/projeto-2"
                 >
                   <div class="card-project">
-                    <img
-                      src="assets/img/projects/project3.jpg"
-                      alt="Screenshot do projeto 3"
-                      class="card-thumb"
-                    />
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 3</h3>
+                      <h3 class="card-title">Projeto 2</h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 3 — stack: PHP, MySQL.
+                        Descrição curta do projeto 2 — stack: Next.js, API.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-3"
+                        href="https://github.com/usuario/projeto-2"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -416,22 +391,17 @@
                 </article>
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-3"
+                  data-github="https://github.com/usuario/projeto-2"
                 >
                   <div class="card-project">
-                    <img
-                      src="assets/img/projects/project3.jpg"
-                      alt="Screenshot do projeto 3"
-                      class="card-thumb"
-                    />
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 3</h3>
+                      <h3 class="card-title">Projeto 2</h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 3 — stack: PHP, MySQL.
+                        Descrição curta do projeto 2 — stack: Next.js, API.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-3"
+                        href="https://github.com/usuario/projeto-2"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -441,22 +411,17 @@
                 </article>
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-3"
+                  data-github="https://github.com/usuario/projeto-2"
                 >
                   <div class="card-project">
-                    <img
-                      src="assets/img/projects/project3.jpg"
-                      alt="Screenshot do projeto 3"
-                      class="card-thumb"
-                    />
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 3</h3>
+                      <h3 class="card-title">Projeto 2</h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 3 — stack: PHP, MySQL.
+                        Descrição curta do projeto 2 — stack: Next.js, API.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-3"
+                        href="https://github.com/usuario/projeto-2"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -482,14 +447,33 @@
         <p class="muted">
           deixe seu e‑mail, telefone ou link para o linkedin / github.
         </p>
+
         <form
           class="contact-form"
-          onsubmit="event.preventDefault();alert('formulário (exemplo)')"
+          action="assets/enviar-contato.php"
+          method="POST"
         >
-          <input class="input" placeholder="nome" required />
-          <input class="input" type="email" placeholder="e-mail" required />
-          <textarea class="input" rows="4" placeholder="mensagem"></textarea>
-          <button class="btn-primary" type="submit">enviar</button>
+          <input
+            class="input"
+            type="text"
+            name="name"
+            placeholder="nome"
+            required
+          />
+          <input
+            class="input"
+            type="email"
+            name="email"
+            placeholder="e-mail"
+            required
+          />
+          <textarea
+            class="input"
+            name="message"
+            rows="4"
+            placeholder="mensagem"
+          ></textarea>
+          <button class="btn-primary-enviar" type="submit">enviar</button>
         </form>
       </section>
     </main>
