--- a/index.html
+++ b/index.html
@@ -287,17 +287,20 @@
                 <!-- Exemplo de projeto: duplique e ajuste data-github, img, título, descrição -->
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
+                  data-github="https://github.com/nicolas-malheiros/CRUD-usuario-utilizando-Codeigniter"
                 >
                   <div class="card-project">
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
+                      <h3 class="card-title">
+                        Projeto CRUD Utilizando o Framework Codelgniter
+                      </h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
+                        CRUD, utilizando o framework codeigniter, gerenciamento
+                        de usuários, com banco de dados junto com o projeto
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
+                        href="https://github.com/nicolas-malheiros/CRUD-usuario-utilizando-Codeigniter"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
