--- a/index.html
+++ b/index.html
@@ -311,17 +311,20 @@
 
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
+                  data-github="https://github.com/nicolas-malheiros/buscador-livros-api-js"
                 >
                   <div class="card-project">
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
+                      <h3 class="card-title">
+                        Projeto Técnico de uma API de Buscador de Livros
+                      </h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
+                        Um projeto para aprimorar a mexer com a API de livros,
+                        fazendo um sistema de uma mini biblioteca para o usuário
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
+                        href="https://github.com/nicolas-malheiros/buscador-livros-api-js"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -332,17 +335,21 @@
 
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
+                  data-github="https://github.com/nicolas-malheiros/chatbot-IA-gemini"
                 >
                   <div class="card-project">
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
+                      <h3 class="card-title">
+                        Projeto de Chat Bot IA do Gemini para fazer mini
+                        consultas
+                      </h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
+                        Utilizar o Gemini para fazer consultas pré prompt para
+                        seguir um caminho no resultado.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
+                        href="https://github.com/nicolas-malheiros/chatbot-IA-gemini"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -354,17 +361,24 @@
                 <!-- adicione quantos projetos quiser -->
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
+                  data-github="https://github.com/nicolas-malheiros/CEOS-CONDOMINIOS---PROJETO-TECNICO"
                 >
                   <div class="card-project">
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
+                      <h3 class="card-title">
+                        Projeto de Sistema de Gestão e Comunicação para
+                        Condomínios
+                      </h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
+                        O CEOS Condomínios é uma plataforma web desenvolvida
+                        para facilitar e otimizar a comunicação interna e a
+                        gestão de condomínios residenciais. O sistema oferece
+                        uma solução integrada para síndicos, porteiros e
+                        moradores...
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
+                        href="https://github.com/nicolas-malheiros/CEOS-CONDOMINIOS---PROJETO-TECNICO"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -374,17 +388,20 @@
                 </article>
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
+                  data-github="https://github.com/nicolas-malheiros/sistema-girl"
                 >
                   <div class="card-project">
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
+                      <h3 class="card-title">
+                        Projeto de Homenagem para Amada
+                      </h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
+                        Sistema feito para homegear minha namorada, gostei
+                        bastante, utilizei varias APIS.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
+                        href="https://github.com/nicolas-malheiros/sistema-girl"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
@@ -394,37 +411,18 @@
                 </article>
                 <article
                   class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
+                  data-github="https://github.com/nicolas-malheiros/portfolio"
                 >
                   <div class="card-project">
                     <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
+                      <h3 class="card-title">Projeto do meu Portfolio</h3>
                       <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
+                        Portfolio feito para mostrar meu trabalho para as
+                        pessoas.
                       </p>
                       <a
                         class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Veja no GitHub</a
-                      >
-                    </div>
-                  </div>
-                </article>
-                <article
-                  class="carousel-item"
-                  data-github="https://github.com/usuario/projeto-2"
-                >
-                  <div class="card-project">
-                    <div class="card-body">
-                      <h3 class="card-title">Projeto 2</h3>
-                      <p class="card-desc">
-                        Descrição curta do projeto 2 — stack: Next.js, API.
-                      </p>
-                      <a
-                        class="card-cta"
-                        href="https://github.com/usuario/projeto-2"
+                        href="https://github.com/nicolas-malheiros/portfolio"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Veja no GitHub</a
