--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             target="_blank"
             aria-label="GitHub"
           >
-            <img src="/assets/img/icons/github.svg" alt="GitHub" />
+            <img src="assets/img/icons/github.svg" alt="GitHub" />
           </a>
           <a
             href="https://www.linkedin.com/in/nicolas-malheiros-90b191249/"
