--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- hero / inicio (section com id para nav funcionar) -->
       <section id="inicio" class="hero">
         <div class="hero-inner">
-          <div class="title-portfolio">P O R T F O L I O</div>
+          <div class="title-portfolio">P O R T F O L I O 1</div>
           <div class="site-title">Nicolas Malheiros</div>
           <div class="site-sub">| Full-stack Developer |</div>
           <button class="btn-primary" data-target="#sobre">VEJA MAIS ↓</button>
