--- a/index.html
+++ b/index.html
@@ -449,11 +449,7 @@
           deixe seu e‑mail, telefone ou link para o linkedin / github.
         </p>
 
-        <form
-          class="contact-form"
-          action="https://formsubmit.co/nicolasdanielmalheiros@email.com"
-          method="POST"
-        >
+        <form class="contact-form" id="portfolio-contact-form">
           <input
             class="input"
             type="text"
