--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>Nicolas Malheiros - Portfólio</title>
   </head>
   <body>
-    <!-- topbar com botão para abrir/fechar a nav -->
     <div class="topbar">
       <button
         class="hamburger"
@@ -22,7 +21,6 @@
         aria-controls="mainNav"
         title="abrir menu"
       >
-        <!-- ícone simples -->
         <svg
           width="18"
           height="18"
@@ -52,7 +50,7 @@
     </div>
 
     <main>
-      <!-- hero / inicio (section com id para nav funcionar) -->
+      <!-- hero / inicio -->
       <section id="inicio" class="hero">
         <div class="hero-inner">
           <div class="title-portfolio">P O R T F O L I O</div>
@@ -61,7 +59,6 @@
           <button class="btn-primary" data-target="#sobre">VEJA MAIS ↓</button>
         </div>
 
-        <!-- ícones sociais no final da hero (apenas uma vez, dentro da section) -->
         <div class="socials">
           <a
             href="https://github.com/nicolas-malheiros"
@@ -92,10 +89,8 @@
       </section>
 
       <!-- sobre -->
-      <!-- about / sobre (versão reorganizada) -->
       <section id="sobre" class="about-section">
         <div class="about-inner">
-          <!-- título e introdução -->
           <header class="about-header">
             <h2>Sobre</h2>
             <p class="about-lead">
@@ -103,7 +98,6 @@
             </p>
           </header>
 
-          <!-- topo: imagem à esquerda / descrição à direita -->
           <div class="about-top">
             <figure class="about-figure">
               <img
@@ -193,7 +187,6 @@
             <p class="about-lead"><b>Minhas qualificações</b></p>
           </header>
 
-          <!-- GRID com duas colunas: Educação | Experiência -->
           <div class="timeline-grid">
             <!-- EDUCAÇÃO -->
             <div class="timeline-column">
@@ -261,7 +254,6 @@
         </div>
       </section>
 
-      <!-- portfolio -->
       <!-- PORTFOLIO — CARROSSEL -->
       <section
         id="portfolio"
@@ -284,7 +276,6 @@
 
             <div class="carousel-viewport">
               <div class="carousel-track">
-                <!-- Exemplo de projeto: duplique e ajuste data-github, img, título, descrição -->
                 <article
                   class="carousel-item"
                   data-github="https://github.com/nicolas-malheiros/CRUD-usuario-utilizando-Codeigniter"
@@ -358,7 +349,6 @@
                   </div>
                 </article>
 
-                <!-- adicione quantos projetos quiser -->
                 <article
                   class="carousel-item"
                   data-github="https://github.com/nicolas-malheiros/CEOS-CONDOMINIOS---PROJETO-TECNICO"
