--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <h4>Freelancer</h4>
                     <p>
                       Desenvolvendo programa em sistema web para clientes que
-                      procuram faciltitar seu negócio.
+                      procuram facilitar seu negócio.
                     </p>
                   </div>
                 </article>
@@ -383,11 +383,11 @@
                   <div class="card-project">
                     <div class="card-body">
                       <h3 class="card-title">
-                        Projeto de Homenagem para Amada
+                        Projeto de Homenagem para Pessoa Amada
                       </h3>
                       <p class="card-desc">
-                        Sistema feito para homegear minha namorada, gostei
-                        bastante, utilizei varias APIS.
+                        Sistema feito para homenagear minha namorada, gostei
+                        bastante, utilizei várias APIS.
                       </p>
                       <a
                         class="card-cta"
