--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <section id="contato">
         <h2 class="section-title">contato</h2>
         <p class="muted">
-          deixe seu e‑mail, telefone ou link para o linkedin / github.
+          email: nicolasdanielmalheiros@gmail.com - nmr: (47)988956417
         </p>
 
         <form class="contact-form" id="portfolio-contact-form">
